--- a/trunk/src/SolidOpt.csproj
+++ b/trunk/src/SolidOpt.csproj
@@ -49,6 +49,7 @@
     </Reference>
     <Reference Include="System.Data" />
     <Reference Include="System.Web.Services" />
+    <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Core\Loader\Loader.cs" />
@@ -167,7 +168,6 @@
     <Folder Include="Services\Compatibility\" />
     <Compile Include="Services\Compatibility\FixEnumerableVariance.cs" />
     <Compile Include="Services\Subsystems\Cache\src\CacheManager.cs" />
-    <Compile Include="Services\Subsystems\Cache\demo\Cache1\src\Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Subsystems\Cache\demo\Cache1\src\ClassBuilder.cs" />
     <Compile Include="Services\Subsystems\Cache\demo\Cache1\src\Program.cs" />
     <Compile Include="Services\Subsystems\Cache\demo\Cache1\src\ResultClass.cs" />
@@ -179,7 +179,6 @@
     <Compile Include="Services\Subsystems\Cache\demo\Cache1\src\TestMemExpire.cs" />
     <Compile Include="Services\Subsystems\Cache\demo\Cache1\src\TestMemIsolatedStorage.cs" />
     <Compile Include="Services\Subsystems\Cache\demo\Cache1\src\TestMemIsolatedStorage1Collision.cs" />
-    <Compile Include="Services\Subsystems\Configurator\demo\AdvancedConfigDemo\src\Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Subsystems\Configurator\demo\AdvancedConfigDemo\src\Program.cs" />
     <Compile Include="Services\Subsystems\Configurator\src\Mappers\CustomMapperGroup.cs" />
     <Compile Include="Services\Subsystems\Configurator\src\Mappers\IConfigMapper.cs" />
@@ -221,32 +220,21 @@
     <Compile Include="Services\Transformations\CodeModel\ControlFlowGraph\src\ExceptionHandlerData.cs" />
     <Compile Include="Services\Transformations\CodeModel\ControlFlowGraph\src\InstructionBlock.cs" />
     <Compile Include="Services\Transformations\CodeModel\ControlFlowGraph\src\InstructionData.cs" />
-    <Compile Include="Services\Transformations\Multimodel\AstMethodDefinitionModel\Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Transformations\Multimodel\AstMethodDefinitionModel\src\AstMethodDefinition.cs" />
-    <Compile Include="Services\Transformations\Multimodel\ASTtoIL\Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Transformations\Multimodel\ASTtoIL\src\ASTtoILTransformer.cs" />
     <Compile Include="Services\Transformations\Multimodel\ASTtoIL\src\Compiler.cs" />
-    <Compile Include="Services\Transformations\Multimodel\CilToControlFlowGraph\src\Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Transformations\Multimodel\CilToControlFlowGraph\src\CilToControlFlowGraph.cs" />
     <Compile Include="Services\Transformations\Multimodel\CilToControlFlowGraph\src\ControlFlowGraphBuilder.cs" />
-    <Compile Include="Services\Transformations\Multimodel\ILtoAST\Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Transformations\Multimodel\ILtoAST\src\ILtoASTTransformer.cs" />
-    <Compile Include="Services\Transformations\Optimizations\ConstantFolding\Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Transformations\Optimizations\ConstantFolding\src\ConstantFoldingTransformer.cs" />
     <Compile Include="Services\Transformations\Optimizations\ConstantPropagation\src\ConstantPropagationTransformer.cs" />
-    <Compile Include="Services\Transformations\Optimizations\MethodInlineIL\Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Transformations\Optimizations\MethodInlineIL\src\MethodInlineILTransformer.cs" />
     <Compile Include="Services\Transformations\Optimizations\MethodInliner\src\InlineTransformer.cs" />
-    <Compile Include="Services\Transformations\Optimizations\NopRemover\Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Transformations\Optimizations\NopRemover\src\NopRemoveTransformer.cs" />
-    <Compile Include="Services\Transformations\Optimizations\OverflowArithmeticRemover\Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Transformations\Optimizations\OverflowArithmeticRemover\src\OverflowArithmeticRemoveTransformer.cs" />
-    <Compile Include="Services\Transformations\Optimizations\SimplifyExpression\Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Transformations\Optimizations\SimplifyExpression\src\SimplifyExpressionTransformer.cs" />
     <Compile Include="Services\WebServices\RealTimeOpt\demo\SolidOptWebServiceClient\Web References\www.solidopt.org\Reference.cs" />
     <Compile Include="Services\WebServices\RealTimeOpt\demo\SolidOptWebServiceClient\Program.cs" />
-    <Compile Include="Services\WebServices\RealTimeOpt\demo\SolidOptWebServiceClient\Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\WebServices\RealTimeOpt\src\Properties\AssemblyInfo.cs" />
     <Compile Include="Services\WebServices\RealTimeOpt\src\SolidOprService.asmx.cs" />
     <Compile Include="Services\AbstractService.cs" />
     <Compile Include="Services\AbstractServiceContainer.cs" />
@@ -256,7 +244,6 @@
     <Compile Include="Services\IServiceProvider.cs" />
     <Compile Include="Services\PluginServiceContainer.cs" />
     <Compile Include="Services\ServiceContainer.cs" />
-    <Compile Include="Services\Subsystems\Configurator\demo\SeparateConfig\src\Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Subsystems\Configurator\demo\SeparateConfig\src\Config3.cs" />
     <ProjectReference Include="vendors\Cecil.Decompiler\Cecil.Decompiler\Cecil.Decompiler.csproj">
       <Project>{ED1BE103-1699-4116-A732-616BEB142EB2}</Project>
@@ -298,6 +285,20 @@
     <None Include="Services\WebServices\RealTimeOpt\demo\SolidOptWebServiceClient\Web References\www.solidopt.org\SolidOptService.wsdl" />
     <None Include="Services\WebServices\RealTimeOpt\src\SolidOptService.asmx" />
     <None Include="Services\WebServices\RealTimeOpt\src\Web.config" />
+    <None Include="Services\Subsystems\Cache\demo\Cache1\src\Properties\AssemblyInfo.cs" />
+    <None Include="Services\Subsystems\Configurator\demo\AdvancedConfigDemo\src\Properties\AssemblyInfo.cs" />
+    <None Include="Services\Transformations\Multimodel\AstMethodDefinitionModel\Properties\AssemblyInfo.cs" />
+    <None Include="Services\Transformations\Multimodel\ASTtoIL\Properties\AssemblyInfo.cs" />
+    <None Include="Services\Transformations\Multimodel\CilToControlFlowGraph\src\Properties\AssemblyInfo.cs" />
+    <None Include="Services\Transformations\Multimodel\ILtoAST\Properties\AssemblyInfo.cs" />
+    <None Include="Services\Transformations\Optimizations\ConstantFolding\Properties\AssemblyInfo.cs" />
+    <None Include="Services\Transformations\Optimizations\MethodInlineIL\Properties\AssemblyInfo.cs" />
+    <None Include="Services\Transformations\Optimizations\NopRemover\Properties\AssemblyInfo.cs" />
+    <None Include="Services\Transformations\Optimizations\OverflowArithmeticRemover\Properties\AssemblyInfo.cs" />
+    <None Include="Services\Transformations\Optimizations\SimplifyExpression\Properties\AssemblyInfo.cs" />
+    <None Include="Services\WebServices\RealTimeOpt\demo\SolidOptWebServiceClient\Properties\AssemblyInfo.cs" />
+    <None Include="Services\WebServices\RealTimeOpt\src\Properties\AssemblyInfo.cs" />
+    <None Include="Services\Subsystems\Configurator\demo\SeparateConfig\src\Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ProjectExtensions>
     <MonoDevelop>
