--- a/trunk/src/Services/Transformations/Multimodel/AstMethodDefinitionModel/AstMethodDefinitionModel.csproj
+++ b/trunk/src/Services/Transformations/Multimodel/AstMethodDefinitionModel/AstMethodDefinitionModel.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <ProjectGuid>{009B19FC-7D5E-4F38-8421-7A63115C23E8}</ProjectGuid>
@@ -33,17 +33,10 @@
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Core">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="System.Xml" />
-    <Reference Include="System.Xml.Linq">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AstMethodDefinition.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="src\AstMethodDefinition.cs" />
   </ItemGroup>
   <PropertyGroup>
     <PostBuildEvent>..\..\post-build-$(Configuration).bat</PostBuildEvent>
@@ -61,13 +54,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\core\src\vendors\Cecil.Decompiler\Cecil.Decompiler\Cecil.Decompiler.csproj">
-      <Project>{ED1BE103-1699-4116-A732-616BEB142EB2}</Project>
-      <Name>Cecil.Decompiler</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\..\core\src\vendors\Mono.Cecil\Mono.Cecil.csproj">
+    <ProjectReference Include="..\..\..\..\vendors\Mono.Cecil\Mono.Cecil.csproj">
       <Project>{D68133BD-1E63-496E-9EDE-4FBDBF77B486}</Project>
       <Name>Mono.Cecil</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\..\vendors\Cecil.Decompiler\Cecil.Decompiler\Cecil.Decompiler.csproj">
+      <Project>{ED1BE103-1699-4116-A732-616BEB142EB2}</Project>
+      <Name>Cecil.Decompiler</Name>
     </ProjectReference>
   </ItemGroup>
 </Project>
