--- a/trunk/src/Services/Transformations/Multimodel/Multimodel.csproj
+++ b/trunk/src/Services/Transformations/Multimodel/Multimodel.csproj
@@ -39,9 +39,9 @@
     <Compile Include="IDecompile.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Compatibility\Compatibility.csproj">
+    <ProjectReference Include="..\..\Compatibility\SolidOpt.Services.Compatibility.csproj">
       <Project>{846d2563-5af8-4459-81c6-59a9da174849}</Project>
-      <Name>Compatibility</Name>
+      <Name>SolidOpt.Services.Compatibility</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\Services.csproj">
       <Project>{c41b5fb4-dae9-4a27-9d15-55109ab79660}</Project>
