--- a/trunk/src/Services/WebServices/RealTimeOpt/demo/SolidOptWebServiceClient/SolidOptWebServiceClient.csproj
+++ b/trunk/src/Services/WebServices/RealTimeOpt/demo/SolidOptWebServiceClient/SolidOptWebServiceClient.csproj
@@ -4,10 +4,11 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <OutputType>Exe</OutputType>
-    <RootNamespace>SolidOptWebServiceClient</RootNamespace>
-    <AssemblyName>SolidOptWebServiceClient</AssemblyName>
+    <RootNamespace>SolidOpt.Services.WebServices.SolidOptWebServiceClient</RootNamespace>
+    <AssemblyName>SolidOpt.Services.WebServices.SolidOptWebServiceClient</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <AppDesignerFolder>Properties</AppDesignerFolder>
+    <SourceAnalysisOverrideSettingsFile>C:\Documents and Settings\Sasho\Application Data\ICSharpCode/SharpDevelop3.0\Settings.SourceAnalysis</SourceAnalysisOverrideSettingsFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
     <OutputPath>bin\Debug\</OutputPath>
