--- a/trunk/src/Core/Loader/demo/StandardLoader/Loadee/Loadee.csproj
+++ b/trunk/src/Core/Loader/demo/StandardLoader/Loadee/Loadee.csproj
@@ -66,13 +66,13 @@
       <Project>{c41b5fb4-dae9-4a27-9d15-55109ab79660}</Project>
       <Name>SolidOpt.Services</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\..\..\Services\Transformations\Optimizations\AST\MethodInliner\SolidOpt.Services.MethodInliner.csproj">
+    <ProjectReference Include="..\..\..\..\..\Services\Transformations\Optimizations\AST\MethodInliner\SolidOpt.Services.MethodInline.csproj">
       <Project>{09A9101B-94C4-46F0-99B5-DA5E658C5A4E}</Project>
-      <Name>SolidOpt.Services.MethodInliner</Name>
+      <Name>SolidOpt.Services.MethodInline</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\..\..\Services\Transformations\Optimizations\IL\MethodInlineIL\SolidOpt.Services.MethodInlineIL.csproj">
+    <ProjectReference Include="..\..\..\..\..\Services\Transformations\Optimizations\IL\MethodInlineIL\SolidOpt.Services.MethodInline.csproj">
       <Project>{9DFD76F4-C25D-4AB8-BC5F-ED932767B84D}</Project>
-      <Name>SolidOpt.Services.MethodInlineIL</Name>
+      <Name>SolidOpt.Services.MethodInline</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\..\..\..\Services\Transformations\Optimizations\SolidOpt.Services.Optimizations.csproj">
       <Project>{cccc9966-8ceb-4451-8ad4-fe48d7ad04bb}</Project>
