--- a/trunk/src/Services/Transformations/Optimizations/AST/ConstantFolding/SolidOpt.Services.ConstantFolding.csproj
+++ b/trunk/src/Services/Transformations/Optimizations/AST/ConstantFolding/SolidOpt.Services.ConstantFolding.csproj
@@ -5,8 +5,8 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <OutputType>Library</OutputType>
-    <RootNamespace>SolidOpt.Services.Transformations.Optimizations.ConstantFolding</RootNamespace>
-    <AssemblyName>SolidOpt.Services.Transformations.Optimizations.ConstantFolding</AssemblyName>
+    <RootNamespace>SolidOpt.Services.Transformations.Optimizations.AST.ConstantFolding</RootNamespace>
+    <AssemblyName>SolidOpt.Services.Transformations.Optimizations.AST.ConstantFolding</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <SourceAnalysisOverrideSettingsFile>C:\Documents and Settings\Vassil Vassilev\Application Data\ICSharpCode/SharpDevelop3.0\Settings.SourceAnalysis</SourceAnalysisOverrideSettingsFile>
