--- a/trunk/src/Services/Transformations/Optimizations/IL/MethodInline/SolidOpt.Services.MethodInline.csproj
+++ b/trunk/src/Services/Transformations/Optimizations/IL/MethodInline/SolidOpt.Services.MethodInline.csproj
@@ -5,8 +5,8 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <OutputType>Library</OutputType>
-    <RootNamespace>SolidOpt.Services.Transformations.Optimizations.MethodInlineIL</RootNamespace>
-    <AssemblyName>SolidOpt.Services.Transformations.Optimizations.MethodInlineIL</AssemblyName>
+    <RootNamespace>SolidOpt.Services.Transformations.Optimizations.IL.MethodInline</RootNamespace>
+    <AssemblyName>SolidOpt.Services.Transformations.Optimizations.IL.MethodInline</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <SourceAnalysisOverrideSettingsFile>C:\Documents and Settings\Sasho\Application Data\ICSharpCode/SharpDevelop3.0\Settings.SourceAnalysis</SourceAnalysisOverrideSettingsFile>
@@ -39,7 +39,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="src\MethodInlineILTransformer.cs" />
+    <Compile Include="src\InlineTransformer.cs" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
